show summaries of estimates

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
-/* TODO: add styles */
+.estimate-summary {
+    display: flex;
+    justify-content: flex-end;
+    padding: 12px 0 6px 0;
+}
+
+.in-progress {
+    background-color: rgb(0, 82, 204) !important;
+    color: rgb(255, 255, 255) !important;
+    margin-left: 4px;
+}
+
+.done {
+    background-color: rgb(0, 135, 90) !important;
+    color: rgb(255, 255, 255) !important;
+    margin-left: 4px;
+}
