--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,30 @@
     padding: 12px 0 6px 0;
 }
 
+.chip {
+    display: inline-block;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: 1;
+    min-width: 1px;
+    text-align: center;
+    border-radius: 2em;
+    padding: 0.166667em 0.5em;
+}
+
+.todo {
+    background-color: rgb(223, 225, 230);
+    color: rgb(23, 43, 77);
+}
+
 .in-progress {
-    background-color: rgb(0, 82, 204) !important;
-    color: rgb(255, 255, 255) !important;
+    background-color: rgb(0, 82, 204);
+    color: rgb(255, 255, 255);
     margin-left: 4px;
 }
 
 .done {
-    background-color: rgb(0, 135, 90) !important;
-    color: rgb(255, 255, 255) !important;
+    background-color: rgb(0, 135, 90);
+    color: rgb(255, 255, 255);
     margin-left: 4px;
 }
