show summary of percentage done

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
     padding: 12px 0 6px 0;
 }
 
+.description {
+    color: rgb(107, 119, 140);
+    display: inline-block;
+    line-height: 1;
+}
+
 .chip {
     display: inline-block;
     font-size: 12px;
@@ -18,6 +24,7 @@
 .todo {
     background-color: rgb(223, 225, 230);
     color: rgb(23, 43, 77);
+    margin-left: 8px;
 }
 
 .in-progress {
@@ -30,4 +37,9 @@
     background-color: rgb(0, 135, 90);
     color: rgb(255, 255, 255);
     margin-left: 4px;
+}
+
+.estimate-percentage-done {
+    display: inline-block;
+    text-align: right;
 }
