--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.estimate-summary {
+.estimates {
     display: flex;
     justify-content: flex-end;
     padding: 12px 0 6px 0;
@@ -24,22 +24,22 @@
 .todo {
     background-color: rgb(223, 225, 230);
     color: rgb(23, 43, 77);
-    margin-left: 8px;
+    margin-left: 12px;
 }
 
 .in-progress {
     background-color: rgb(0, 82, 204);
     color: rgb(255, 255, 255);
-    margin-left: 4px;
 }
 
 .done {
     background-color: rgb(0, 135, 90);
     color: rgb(255, 255, 255);
-    margin-left: 4px;
 }
 
 .estimate-percentage-done {
+    color: rgb(107, 119, 140);
     display: inline-block;
-    text-align: right;
+    margin-left: 12px;
+    margin-right: 2px;
 }
